[gd_scene load_steps=3 format=3 uid="uid://dwxjqrwr1r6ww"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_6vacl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ngvbd"]
size = Vector2(1920, 40)

[node name="Game" type="Node2D"]
script = ExtResource("1_6vacl")

[node name="Words" type="Node2D" parent="."]

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 660.0
offset_top = 900.0
offset_right = 860.0
offset_bottom = 932.0
scale = Vector2(3, 3)
alignment = 1

[node name="ScoreBoard" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 100.0
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="Score" type="Label" parent="ScoreBoard"]
layout_mode = 0
offset_left = 62.0
offset_top = 22.0
offset_right = 269.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 40
text = "Score : 0"

[node name="Category" type="Label" parent="ScoreBoard"]
layout_mode = 0
offset_left = 710.0
offset_top = 8.0
offset_right = 1210.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 60
text = "Instruments
"
horizontal_alignment = 1

[node name="Lives" type="Label" parent="ScoreBoard"]
layout_mode = 0
offset_left = 1657.0
offset_top = 22.0
offset_right = 1864.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 40
text = "Lives: 3"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(960, 921)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_ngvbd")

[node name="Particles" type="Node2D" parent="."]

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
